#1: resized default size of config window, adjusted description text

--- a/src/main/java/gui/messages.properties
+++ b/src/main/java/gui/messages.properties
@@ -109,7 +109,7 @@ ConfigDialog.30=Please enter the name of the new network map
 ConfigDialog.38=Save template...
 ConfigDialog.39=Load template...
 ConfigDialog.40=OK
-ConfigDialog.Description=<html>This is the Configuration Dialog for VennMaker. In this dialog you can edit all properties of your VennMaker project,  <br> or you can load an existing VennMaker template, which contains a preconfigured project.</html>
+ConfigDialog.Description=<html>This is the Configuration Dialog for VennMaker.<br>In this dialog you can edit all properties of your VennMaker project,  <br> or you can load an existing VennMaker template, <br> which contains a preconfigured project.</html>
 ConfigSaveListener.Saved=File saved successfully
 ConfigSaveListener.Saved-Title=File saved
 ConfigSaveListener.Exists=File already exists, you want to override it?
