--- a/src/main/java/gui/messages_de.properties
+++ b/src/main/java/gui/messages_de.properties
@@ -109,7 +109,7 @@ ConfigDialog.30=Bitte den Namen der Netzwerkkarte eingeben
 ConfigDialog.38=Speichere Template...
 ConfigDialog.39=Lade Template...
 ConfigDialog.40=OK
-ConfigDialog.Description=<html>Das ist der Konfigurationsbereich von VennMaker. Hier k\u00F6nnen Sie alle projektbezogenen Einstellungen vornehmen <br> oder ein Template, das alle Konfigurationseinstellungen enth\u00E4lt, laden.</html>
+ConfigDialog.Description=<html>Das ist der Konfigurationsbereich von VennMaker. <br>Hier k\u00F6nnen Sie alle projektbezogenen Einstellungen vornehmen <br> oder ein Template, das alle Konfigurationseinstellungen enth\u00E4lt, laden.</html>
 ConfigSaveListener.Saved=Datei erfolgreich gespeichert.
 ConfigSaveListener.Saved-Title=Datei gespeichert.
 ConfigSaveListener.Exists=Die Datei existiert bereits. Wollen Sie die Datei \u00FCberschreiben?
