--- a/src/main/java/gui/messages_fr.properties
+++ b/src/main/java/gui/messages_fr.properties
@@ -107,7 +107,7 @@ ConfigDialog.30=Veuillez entrer le nom du plan de r\u00e9seau
 ConfigDialog.38=Sauvegarde de mod\u00e8le
 ConfigDialog.39=Chargement du mod\u00e8le
 ConfigDialog.40=OK
-ConfigDialog.Description=<html>Ceci est la zone de configuration de VennMaker. Ici, vous pouvez modifier tout ajustage relatif au projet <br> ou charger un mod\u00e8le comportant tout ajustages.</html>
+ConfigDialog.Description=<html>Ceci est la zone de configuration de VennMaker. <br>Ici, vous pouvez modifier tout ajustage relatif au projet <br> ou charger un mod\u00e8le comportant tout ajustages.</html>
 ConfigSaveListener.Saved=Fichier enregistr\u00e9
 ConfigSaveListener.Saved-Title=Fichier enregistr\u00e9
 ConfigSaveListener.Exists=Le fichier existe d\u00e9j\u00e0! Voulez-vous l'\u00e9craser?
