--- a/src/main/java/gui/messages_ru.properties
+++ b/src/main/java/gui/messages_ru.properties
@@ -107,7 +107,7 @@ ConfigDialog.30=\u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430, \u
 ConfigDialog.38=\u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u043e\u0431\u0440\u0430\u0437\u0435\u0446...
 ConfigDialog.39=\u0417\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044c \u043e\u0431\u0440\u0430\u0437\u0435\u0446...
 ConfigDialog.40=\u041e\u041a
-ConfigDialog.Description=<html>This is the Configuration Dialog for VennMaker. In this dialog you can edit all properties of your VennMaker project,  <br> or you can load an existing VennMaker template, which contains a preconfigured project.</html>
+ConfigDialog.Description=<html>This is the Configuration Dialog for VennMaker. <br>In this dialog you can edit all properties of your VennMaker project,  <br> or you can load an existing VennMaker template, which contains a preconfigured project.</html>
 ConfigSaveListener.Saved=\u0424\u0430\u0439\u043b \u0431\u044b\u043b \u0443\u0434\u0430\u0447\u043d\u043e \u0441\u043e\u0445\u0440\u0430\u043d\u0435\u043d
 ConfigSaveListener.Saved-Title=\u0424\u0430\u0439\u043b \u0441\u043e\u0445\u0440\u0430\u043d\u0435\u043d
 ConfigSaveListener.Exists=\u0424\u0430\u0439\u043b \u0443\u0436\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442, \u0412\u044b \u0445\u043e\u0442\u0438\u0442\u0435 \u043f\u0435\u0440\u0435\u043f\u0438\u0441\u0430\u0442\u044c \u0444\u0430\u0439\u043b?
