--- a/src/main/java/gui/messages_zh.properties
+++ b/src/main/java/gui/messages_zh.properties
@@ -127,7 +127,7 @@ ConfigDialog.30=\u8bf7\u8f93\u5165\u7f51\u5361\u540d
 ConfigDialog.38=\u4fdd\u5b58\u6a21\u677f...
 ConfigDialog.39=\u52a0\u8f7d\u6a21\u677f...
 ConfigDialog.40=\u597d\u4e86
-ConfigDialog.Description=<html>\u8fd9\u662fVennMaker\u7684\u914d\u7f6e\u5bf9\u8bdd\u6846\u3002\u5728\u6b64\u5bf9\u8bdd\u6846\u4e2d\uff0c\u60a8\u53ef\u4ee5\u7f16\u8f91\u6240\u6709VennMaker\u9879\u76ee\u7684\u5c5e\u6027\uff0c<br>\u6216\u8005\u4f60\u53ef\u4ee5\u52a0\u8f7d\u4e00\u4e2a\u7684\u73b0\u6709VennMaker\u6a21\u677f\uff0c\u5176\u4e2d\u5305\u542b\u4e00\u4e2a\u9884\u5148\u8bbe\u5b9a\u7684\u9879\u76ee\u3002</html>
+ConfigDialog.Description=<html>\u8fd9\u662fVennMaker\u7684\u914d\u7f6e\u5bf9\u8bdd\u6846\u3002<br>\u5728\u6b64\u5bf9\u8bdd\u6846\u4e2d\uff0c\u60a8\u53ef\u4ee5\u7f16\u8f91\u6240\u6709VennMaker\u9879\u76ee\u7684\u5c5e\u6027\uff0c<br>\u6216\u8005\u4f60\u53ef\u4ee5\u52a0\u8f7d\u4e00\u4e2a\u7684\u73b0\u6709VennMaker\u6a21\u677f\uff0c\u5176\u4e2d\u5305\u542b\u4e00\u4e2a\u9884\u5148\u8bbe\u5b9a\u7684\u9879\u76ee\u3002</html>
 ConfigSaveListener.Saved=\u6587\u4ef6\u4fdd\u5b58\u6210\u529f
 ConfigSaveListener.Saved-Title=\u6587\u4ef6\u4fdd\u5b58
 ConfigSaveListener.Exists=\u6587\u4ef6\u5df2\u7ecf\u5b58\u5728\uff0c\u60a8\u8981\u8986\u76d6\u5b83\u5417\uff1f
