added "add to chart" button to sector config dialog

--- a/src/main/java/gui/messages.properties
+++ b/src/main/java/gui/messages.properties
@@ -138,6 +138,7 @@ CDialogSector.ToString=Sectors
 CDialogSector.Col0=Value
 CDialogSector.Col1=Color
 CDialogSector.Col2=Choose Color
+CDialogSector.AddToChart=Add To Chart
 CDialogTrigger.Title=Trigger
 CDialogTrigger.Description=Choose special attribute to use them to create new actors, or change existing
 CDialogTrigger.ToString=Trigger
