added "Add to chart" button to circles config dialog

--- a/src/main/java/gui/messages.properties
+++ b/src/main/java/gui/messages.properties
@@ -109,6 +109,7 @@ ConfigDialog.30=Please enter the name of the new network map
 ConfigDialog.38=Save template...
 ConfigDialog.39=Load template...
 ConfigDialog.40=OK
+ConfigDialog.50=Add to map
 ConfigDialog.Description=<html>This is the Configuration Dialog for VennMaker.<br>In this dialog you can edit all properties of your VennMaker project,  <br> or you can load an existing VennMaker template, <br> which contains a preconfigured project.</html>
 ConfigSaveListener.Saved=File saved successfully
 ConfigSaveListener.Saved-Title=File saved
@@ -138,7 +139,6 @@ CDialogSector.ToString=Sectors
 CDialogSector.Col0=Value
 CDialogSector.Col1=Color
 CDialogSector.Col2=Choose Color
-CDialogSector.AddToChart=Add To Chart
 CDialogTrigger.Title=Trigger
 CDialogTrigger.Description=Choose special attribute to use them to create new actors, or change existing
 CDialogTrigger.ToString=Trigger
