translations "add to map" button text

--- a/src/main/java/gui/messages_fr.properties
+++ b/src/main/java/gui/messages_fr.properties
@@ -107,6 +107,7 @@ ConfigDialog.30=Veuillez entrer le nom du plan de r\u00e9seau
 ConfigDialog.38=Sauvegarde de mod\u00e8le
 ConfigDialog.39=Chargement du mod\u00e8le
 ConfigDialog.40=OK
+ConfigDialog.50=Ajouter \u00e0 la carte
 ConfigDialog.Description=<html>Ceci est la zone de configuration de VennMaker. <br>Ici, vous pouvez modifier tout ajustage relatif au projet <br> ou charger un mod\u00e8le comportant tout ajustages.</html>
 ConfigSaveListener.Saved=Fichier enregistr\u00e9
 ConfigSaveListener.Saved-Title=Fichier enregistr\u00e9
