#7 add delete button for sectors

--- a/src/main/java/gui/messages.properties
+++ b/src/main/java/gui/messages.properties
@@ -110,6 +110,7 @@ ConfigDialog.38=Save template...
 ConfigDialog.39=Load template...
 ConfigDialog.40=OK
 ConfigDialog.50=Add to map
+ConfigDialog.51=delete from map
 ConfigDialog.Description=<html>This is the Configuration Dialog for VennMaker.<br>In this dialog you can edit all properties of your VennMaker project,  <br> or you can load an existing VennMaker template, <br> which contains a preconfigured project.</html>
 ConfigSaveListener.Saved=File saved successfully
 ConfigSaveListener.Saved-Title=File saved
