--- a/src/main/java/gui/messages_sp.properties
+++ b/src/main/java/gui/messages_sp.properties
@@ -108,6 +108,7 @@ ConfigDialog.38=Guardar plantilla
 ConfigDialog.39=Cargar plantilla
 ConfigDialog.40=OK
 ConfigDialog.50=A\u00f1adir al mapa
+ConfigDialog.51=Eliminar del mapa
 ConfigDialog.Description=<html>Este es el di\u00e1logo de configuraci\u00f3n para VennMaker. <br>En este di\u00e1logo puedes editar todas las propiedades de tu proyecto de VennMaker, <br> o puedes cargar una plantilla existente de VennMaker, que contiene un proyecto preconfigurado.</html>
 ConfigSaveListener.Saved=Archivo guardado con \u00e9xito
 ConfigSaveListener.Saved-Title=Archivo guardado
