--- a/src/main/java/gui/messages_fr.properties
+++ b/src/main/java/gui/messages_fr.properties
@@ -108,6 +108,7 @@ ConfigDialog.38=Sauvegarde de mod\u00e8le
 ConfigDialog.39=Chargement du mod\u00e8le
 ConfigDialog.40=OK
 ConfigDialog.50=Ajouter \u00e0 la carte
+ConfigDialog.51=Supprimer de la carte
 ConfigDialog.Description=<html>Ceci est la zone de configuration de VennMaker. <br>Ici, vous pouvez modifier tout ajustage relatif au projet <br> ou charger un mod\u00e8le comportant tout ajustages.</html>
 ConfigSaveListener.Saved=Fichier enregistr\u00e9
 ConfigSaveListener.Saved-Title=Fichier enregistr\u00e9
