#7 german translations for delete button

--- a/src/main/java/gui/messages_de.properties
+++ b/src/main/java/gui/messages_de.properties
@@ -110,7 +110,7 @@ ConfigDialog.38=Speichere Template...
 ConfigDialog.39=Lade Template...
 ConfigDialog.40=OK
 ConfigDialog.50=in Karte hinzuf\u00fcgen
-ConfigDialog.51=Aus der Karte l\u00f6schen
+ConfigDialog.51=Aus Karte l\u00f6schen
 ConfigDialog.Description=<html>Das ist der Konfigurationsbereich von VennMaker. <br>Hier k\u00F6nnen Sie alle projektbezogenen Einstellungen vornehmen <br> oder ein Template, das alle Konfigurationseinstellungen enth\u00E4lt, laden.</html>
 ConfigSaveListener.Saved=Datei erfolgreich gespeichert.
 ConfigSaveListener.Saved-Title=Datei gespeichert.
