set global font size: translation added

--- a/src/main/java/gui/messages.properties
+++ b/src/main/java/gui/messages.properties
@@ -672,6 +672,11 @@ VennMaker.MenuToolbarFilter=Edit Filter
 VennMaker.MenuToolbarFilterTooltip=Create oder edit a filter
 VennMaker.MenuToolbarFilterDeactivate=Deactivate filter
 VennMaker.MenuToolbarFilterDeactivateTooltip=Deactivate Filter
+
+VennMaker.Change_FontSize=Set global font size
+VennMaker.ChangeFontSizeTitel=Set global font size
+
+
 VennMaker.Name=Name
 VennMaker.NameDialog=Name dialog
 VennMaker.Network_Add=Add network map
