--- a/src/main/java/gui/messages_de.properties
+++ b/src/main/java/gui/messages_de.properties
@@ -749,6 +749,9 @@ ViewStatisticDialog.SectorEx=In keinem Sektor
 ViewStatisticDialog.Total=Gesamt (ohne Ego)
 VennMaker.Icons_CheckUpdates=icons/intern/vm_update.svg
 VennMaker.Check_Updates=VennMaker aktualisieren
+VennMaker.Change_FontSize=Schriftgröße ändern
+VennMaker.ChangeFontSizeTitel=Schriftgröße ändern
+
 IECategory_Ego=Ego
 IECategory_NameGenerator=Namensgeneratoren
 IECategory_NameInterpretator=Namensinterpretatoren
